Tooltips behave erratically on round buttons #62875

Closed
opened 2019-03-23 08:33:00 +01:00 by Cliff Pratt · 10 comments

System Information
system-info.txt

Short description of error

The tooltip popup on the round buttons in the attached screenshot is super-sensitive and disappears on the smallest movement of the mouse/tablet stylus. However, on the square buttons the mouse/tablet stylus can move a little without the tooltip disappearing. This will affect beginners trying to learn Blender, and will not affect gurus who will not need the tooltips. It will affect tablet users more than mouse users as a "mouseover" when using a tablet is a true "hover". I've tried with both mouse and tablet stylus.

tooltips_report.png

Exact steps for others to reproduce the error

1)The screenshot shows the top right of a 3d-view window.

  1. Hover the mouse or preferably a tablet stylus over the "Solid Mode" button (solid white circle). A tooltip should appear.

  2. Move the mouse slightly and observe if the tooltip disappears. It should not.

  3. Hover the mouse over the round "Ortho/perspective view" button (a grid). A tooltip should appear.

  4. Move the mouse slightly and observe if the tooltip disappears. It does, most of the time.

**System Information** [system-info.txt](https://archive.blender.org/developer/F6868688/system-info.txt) **Short description of error** The tooltip popup on the round buttons in the attached screenshot is super-sensitive and disappears on the smallest movement of the mouse/tablet stylus. However, on the square buttons the mouse/tablet stylus can move a little without the tooltip disappearing. This will affect beginners trying to learn Blender, and will not affect gurus who will not need the tooltips. It will affect tablet users more than mouse users as a "mouseover" when using a tablet is a true "hover". I've tried with both mouse and tablet stylus. ![tooltips_report.png](https://archive.blender.org/developer/F6868815/tooltips_report.png) **Exact steps for others to reproduce the error** 1)The screenshot shows the top right of a 3d-view window. 2) Hover the mouse or preferably a tablet stylus over the "Solid Mode" button (solid white circle). A tooltip should appear. 3) Move the mouse slightly and observe if the tooltip disappears. It should not. 4) Hover the mouse over the round "Ortho/perspective view" button (a grid). A tooltip should appear. 5) Move the mouse slightly and observe if the tooltip disappears. It does, most of the time.
Author

Added subscriber: @EnkiduJones

Added subscriber: @EnkiduJones

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-03-23 19:22:47 +01:00

I agree that the tooltip should stay from those round buttons as long as the mouse does not leave the visual button area.

I agree that the tooltip should stay from those round buttons as long as the mouse does not leave the visual button area.
Brecht Van Lommel removed their assignment 2019-03-25 11:00:31 +01:00
Campbell Barton was assigned by Brecht Van Lommel 2019-03-25 11:00:31 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Gizmo system is more Campbell's area.

Gizmo system is more Campbell's area.

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool
Campbell Barton was unassigned by Abid Maqbool 2019-06-08 13:51:35 +02:00
Abid Maqbool self-assigned this 2019-06-08 13:51:35 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Fixing the bug here: [Fix #62875: Tooltips behave erratically on round buttons ](https://developer.blender.org/D5044)

This issue was referenced by 6868202899

This issue was referenced by 6868202899824a46ee28eb02df74efd76f6e3503

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62875
No description provided.